--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
     "axios": "^1.2.3",
+    "js-file-download": "^0.4.12",
     "next": "13.1.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
