--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@next/font": "13.1.2",
+    "@next/font": "^13.1.2",
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
     "axios": "^1.2.3",
+    "classnames": "^2.3.2",
     "js-file-download": "^0.4.12",
+    "lucide-react": "^0.107.0",
     "next": "13.1.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
